--- a/package.json
+++ b/package.json
@@ -6,17 +6,29 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
+    "@jest/types": "^27.0.6",
+    "@testing-library/dom": "^8.1.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
     "@types/react": "17.0.13",
+    "@types/styled-components": "^5.1.11",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "babel-jest": "^27.0.6",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
+    "jest": "^27.0.6",
+    "jest-dom": "^4.0.0",
+    "ts-node": "^10.0.0",
     "typescript": "4.3.5"
   }
 }
